# MarkovChain

./: CMakeLists.txt  build.sh  readme  run.sh
cmake/: icu.cmake
src/: generator.cpp  learner.cpp  markchain.h  utils.h
src/3rd/icu/source/: Makefile  config.status  icudefs.mk
src/3rd/icu/source/common/: appendable.ao  bmpset.ao  bmpset.d  brkeng.ao  brkeng.d  brkiter.ao  brkiter.d  bytestream.ao  bytestrie.ao  bytestriebuilder.ao  bytestriebuilder.d  bytestrieiterator.ao  bytestrieiterator.d  caniter.ao  caniter.d  chariter.ao  chariter.d  charstr.ao  charstr.d  cmemory.ao  cmemory.d  cstring.ao  cstring.d  cwchar.d  dictbe.ao  dictbe.d  dictionarydata.ao  dictionarydata.d  dtintrv.ao  errorcode.ao  filteredbrk.ao  filteredbrk.d  filterednormalizer2.ao  filterednormalizer2.d  icudataver.ao  icudataver.d  listformatter.ao  listformatter.d  loadednormalizer2impl.ao  loadednormalizer2impl.d  (+291 more)
src/3rd/icu/source/config/: Makefile.inc  icu-config  icu-i18n.pc  icu-io.pc  icu-le.pc  icu-lx.pc  icu-uc.pc  icu.pc  icucross.mk  pkgdata.inc
src/3rd/icu/source/data/: icupkg.inc
src/3rd/icu/source/i18n/: affixpatternparser.ao  affixpatternparser.d  alphaindex.ao  alphaindex.d  anytrans.ao  anytrans.d  astro.ao  astro.d  basictz.ao  basictz.d  bocsu.ao  bocsu.d  brktrans.ao  brktrans.d  buddhcal.ao  buddhcal.d  calendar.ao  calendar.d  casetrn.ao  casetrn.d  cecal.ao  cecal.d  chnsecal.ao  chnsecal.d  choicfmt.ao  choicfmt.d  coleitr.ao  coleitr.d  coll.ao  coll.d  collation.ao  collation.d  collationdata.d  (+360 more)
test/in/: learner.in  learner_rus.in  start_words  start_words_rus
(+331 files in other folders)
